# CPPLogger

./: .gitignore  CMakeLists.txt  README.md
CPPLogger/: CMakeLists.txt
CPPLogger/include/: Logger.hpp  LoggerScope.hpp
CPPLogger/src/: Logger.cpp  LoggerScope.cpp  StringHelp.cpp  StringHelp.hpp
